[package]
name = "struct-variant"
version = "0.1.0"
authors = ["Daniel Hrabovcak <thespiritxiii@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Minimal helper macro to generate an enum out of a list of structs."
repository = "https://github.com/TheSpiritXIII/struct-variant"
documentation = "https://docs.rs/struct-variant"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["sealed", "from", "any", "convert", "cast", "downcast", "upcast", "error"]

[lib]
proc-macro = true

[features]
default = []
doc = []

[dependencies]
quote = "1.0.9"
itertools = "0.10.0"
proc-macro-error = "1.0.4"

[dependencies.syn]
version = "1.0.72"
features = ["full"]

[dev-dependencies]
trybuild = "1.0.42"

[package.metadata.docs.rs]
all-features = true
